test_suite/tests/ui/enum-representation/internal-tuple-variant.stderr
error: #[serde(tag = "...")] cannot be used with tuple variants
 --> tests/ui/enum-representation/internal-tuple-variant.rs:6:5
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
...
6 |     Tuple(u8, u8),
  |     ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
